# Conduit

./: .env.example  .gitignore  .neon  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.tests.json
.github/workflows/: release.yml  verify.yml
apps/account-gateway/: package.json  wrangler.jsonc
apps/account-gateway/src/: index.test.ts  index.ts
apps/desktop/: index.html  package.json  tsconfig.backend.json  vite.config.ts
apps/desktop/backend/: local-harness.test.ts  local-harness.ts
apps/desktop/dev-server/: workspace-command.test.ts  workspace-command.ts
apps/desktop/src/: App.tsx  index.css  version.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  goal_persistence.rs  lib.rs  local_harness.rs  main.rs
apps/desktop/src/lib/: account-gateway-config.ts  account-gateway.test.ts  account-gateway.ts  anonymous-analytics.test.ts  anonymous-analytics.ts  auth-config.test.ts  auth-config.ts  browser-goal-persistence.ts  git-workflow.ts  goal-persistence.test.ts  goal-persistence.ts  harness-health.test.ts  harness-health.ts  local-harness-transport.test.ts  local-harness-transport.ts  local-project.test.ts  local-project.ts  mode-colors.test.ts  mode-colors.ts  model-catalog.test.ts  model-catalog.ts  neon-auth.ts  oauth.ts  popover.tsx  quality-lanes.ts  report-export.ts  support-prompt.test.ts  support-prompt.ts  tauri-tools.ts  update-prompts.test.ts  update-prompts.ts  (+1 more)
apps/telemetry-gateway/: package.json  tsconfig.json  wrangler.jsonc
apps/telemetry-gateway/migrations/: 0001_daily_event_counts.sql
apps/telemetry-gateway/src/: index.test.ts  index.ts
docs/: anonymous-analytics.md  architecture.md  authentication.md  evidence-and-reports.md  goal-definition-runtime.md  goal-loop.md  goal-persistence.md  provider-interface.md  release-notes-0.3.1.md  release-notes-0.3.2.md  release-notes-0.4.0-rc.1.md  release-notes-0.4.0.md  releasing.md  testing.md
docs/architecture/: cgs-migration-map.md
fixtures/goal-driven/: scenarios.json
scripts/: check-release-version.mjs  demo-goal-workflow.mjs  dependency-boundaries.test.ts  release-config.test.ts  run-tests.mjs  smoke-local-harnesses.mjs  verify-release-manifest.mjs  verify-updater-artifacts.mjs
specs/cgs/: README.md
specs/cgs/0.1/: compatibility.md  lifecycle.md  specification.md
(+50 files in other folders)
