[package]
name = "conduit-desktop"
version = "0.4.0-rc.1"
description = "Conduit - Goal-driven software engineering desktop client"
authors = ["Conduit"]
edition = "2021"

[lib]
name = "conduit_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
keyring = "3"
chrono = "0.4"
dirs = "6"
tempfile = "3"
ureq = { version = "2", features = ["json"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
sha2 = "0.11.0"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
